# lehrfempp

./: classlf_1_1assemble_1_1_dof_handler.html  classlf_1_1base_1_1_ref_el.html  classlf_1_1geometry_1_1_geometry.html  classlf_1_1geometry_1_1_segment_o2.html  classlf_1_1mesh_1_1_entity.html  classlf_1_1quad_1_1_quad_rule.html  classlf_1_1uscalfe_1_1_fe_lagrange_o1_quad.html  classlf_1_1uscalfe_1_1_fe_lagrange_o1_segment.html  classlf_1_1uscalfe_1_1_fe_lagrange_o1_tria.html  classlf_1_1uscalfe_1_1_fe_lagrange_o2_tria.html  classlf_1_1uscalfe_1_1_fe_lagrange_point.html  classlf_1_1uscalfe_1_1_fe_space_lagrange_o2.html  classlf_1_1uscalfe_1_1_precomputed_scalar_reference_finite_element.html  classlf_1_1uscalfe_1_1_reaction_diffusion_element_matrix_provider.html  classlf_1_1uscalfe_1_1_scalar_load_edge_vector_provider.html  classlf_1_1uscalfe_1_1_scalar_reference_finite_element.html  classlf_1_1uscalfe_1_1_uniform_scalar_f_e_space.html  dir_7e37452089b3276d38a54c599a9718ce.html  fe__space__lagrange__o2_8h_source.html  fe__space__lagrange__o3_8h_source.html  functions_m.html  geometry__interface_8h_source.html  group__assemble__matrix__locally.html  lagr__fe_8h_source.html  loc__comp__ellbvp_8h_source.html  loc__comp__norms_8h_source.html  mesh__function__grad__fe_8h_source.html  namespacelf_1_1geometry.html  namespacelf_1_1mesh_1_1utils.html  namespacelf_1_1quad.html  namespacelf_1_1refinement.html  namespacelf_1_1uscalfe.html  precomputed__scalar__reference__finite__element_8h_source.html  uniform__scalar__fe__space_8h_source.html
experiments/: CMakeLists.txt
(+404 files in other folders)
